# dz

./: README.md  Solution.md  data.txt
1-oop/: BankAccount.py  BankAccount2.py  Book.py  Chair.py  Config.py  Employee.py  Library.py  Movie.py  Product.py  Student.py  Vehicle.py  main.py  task1.py
2-decorators/: exs.py  homework2.py  main.py  task1.py  task10.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
3-oop-base/: exs-course.py  exs-online-shop.py  exs-storage.py  homework3.py  main.py
4-school/: exs-DI.py  exs-Inf.py  exs-LSP.py  exs-OSP.py  exs-SRP.py  homework-4.py  main.py
5-slots/: homework.py  main.py
6-cache/: exs1.py  exs2.py  exs3.py  exs4.py  hw.py  main.py
7-email/: exs1.py  exs2.py  hw7.py  main.py
8-final/: pyproject.toml
8-final/monitoring/: cli.py
