[project]
name = "monitoring"
version = "0.1.0"
description = ""
authors = [
    {name = "Zulus",email = "jardekov@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual (>=8.2.7,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "monitoring.cli:run"